--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_riverpod: ^2.3.6
   dio: ^5.1.2
   go_router: ^6.5.8
+  flutter_staggered_grid_view: ^0.6.2
 
 dev_dependencies:
   flutter_test:
